GET admin/{id}
