# backend/src/api/modules/controller.js
@@ -7,6 +7,12 @@ import { signToken, decodeToken } from './auth';
 import logger from './logger';
 
 export const controllers = {
+  /**
+   * Create super admin
+   * @param model - admin
+   * @param body - username and password
+   * @returns {*}
+   */
   addSuperAdmin(model, body) {
     const superAdmin = new Admin(body);
 
@@ -27,7 +33,14 @@ export const controllers = {
         throw new Error(error);
       });
   },
-
+  
+  /**
+   * Create admin
+   * @param model - admin
+   * @param body - username and password
+   * @param user - super admin only
+   * @returns {*}
+   */
   addAdmin(model, body, user) {
     return model
       .find({ role: 0 })
@@ -175,15 +188,35 @@ export const getAdmins = (model) => (req, res, next) => {
   }
 };
 
+/**
+ * Get (super)admin by ID
+ * @param model - admin
+ * @returns {Function}
+ */
 export const getAdmin = (model) => (req, res, next) => {
   const { user } = req;
   if (user.role === 0) {
     controllers
       .getOne(req.docFromId)
-      .then((doc) => res.status(200).json(doc))
-      .catch((error) => setImmediate(() => next(error)));
+      .then((admin) =>
+        res.status(200).json({
+          status: 'success',
+          data: { admin },
+        }),
+      )
+      .catch((error) =>
+        setImmediate(() =>
+          next({
+            status: 'fail',
+            data: { ...error },
+          }),
+        ),
+      );
   } else {
-    res.status(200).json(user);
+    res.status(200).json({
+      status: 'success',
+      data: { admin: user },
+    });
   }
 };
 
